# Agente-Productos-Servicio-API

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
src/: main.py
src/configs/: consts.py
src/controllers/: chat_controller.py
src/routes/: chat_route.py
src/services/: database_service.py  edges_service.py  langgraph_service.py  llm_models_service.py  nodes_service.py
src/utils/: response_models.py
